fix layout problems in model editor

--- a/client/less/model.less
+++ b/client/less/model.less
@@ -297,10 +297,10 @@ select {
     margin-left: 2rem;
 }
 .model-header-name-container {
-    display: inline-block;
-    margin-top: 0.7rem;
-    margin-left: 1rem;
-    width: 38.7rem;
+  margin-top: 0.7rem;
+  margin-left: 1rem;
+  max-width: 37rem;
+  margin-right:1rem;
 }
 .model-header-name-container label{
     margin-top: 1rem;
